Override keyset with the IME layout info.

For system IME extension, the default input view url is:
chrome-extension://${extension_id}/inputview.html#id=us.compact.qwerty&language=en-US&passwordLayout=us.compact.qwerty&name=keyboard_us
To show the keyboard with emoji/handwriting keyset directly, we used to override the default input view url as "id=emoji/hwt" directly.

While, the keyboard needs to know the default keyset to get the right 'back to main layout' behavior.

Thus, we override the url as id=${keyset}.emoji/hwt to pass the default keyset and specific keyset info together.

Reload the keyset to notify the hash changed when hide keyboard. Thus the VK will get the onhashchange event when
show with from clicking voice button for many times.

BUG=654247, 654248
TEST=InputMethodManagerImplTest.Override*

Review-Url: https://codereview.chromium.org/2436723002
Cr-Commit-Position: refs/heads/master@{#427637}

Former-commit-id: 9abb3ee29957feee6fa1eacb407238fbc9b48a6e